@@ -16,5 +16,5 @@
   </p>
 <% end %>
 
-<%= link_to 'Exibir', @apartamento %> |
+<%= link_to 'Exibir', @apartamento %>
 <%= link_to 'Voltar', apartamentos_path %>
