@@ -1,3 +1,6 @@
+2009-05-24 Iuri Fernandes <iurifq@gmail.com>
+* Created hospedar action, but it is still not working
+
 2009-05-23 Suzana Matos <suzana.mato@gmail.com>
 * Created tipos_pagamentos (scaffold) and included it in menu
 
